# tools-for-point-cloud-process

./: CMakeLists.txt  README.md
include/: main_widget.hpp  process_widget.hpp  widget_main.hpp  widget_process.hpp
src/: main.cpp  widget_main.cpp  widget_process.cpp
ui/: main_widget.hpp  processWidget.ui  process_widget.hpp  widget.ui
